--- a/cap5/ex5_2.html
+++ b/cap5/ex5_2.html
@@ -12,14 +12,15 @@
     <div style="
         position: relative;
         height: 36px;
-        width: 312px;"
+        width: 437px;"
     >
         <label>Numero: </label>
         <input type="text" id="inNumero">
-        <button onclick="apostar()">Apostar</button>
+        <button id="apostar">Apostar</button>
+        <button id="jogarNovamente">Jogar Novamente</button>
     </div>
         <span id="outErro" style="
-        position: absolute;
+            position: absolute;
             height: 15px;
             bottom: 0;
             top: 101px;
@@ -28,7 +29,7 @@
         "></span>
         <h2>Erros: <span  id="outNumeroDeErros"></span></h2>
         <h2>Chances: <span  id="outChances"></span></h2>
-        <pre  id="outDica" style="font-weight: bold">Dica: É um número entre 1 e 100</pre>
+        <pre  id="outDica" style="font-weight: bold"></pre>
     <script src="./js/ex5_2.js"></script>
 </body>
 </html>
